# WatchDogs

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: audio_proc.h  button_controls.h  camera_controls.h  capture.h  commands.h  joystick_controls.h  lcd.h  menu.h  nightLight.h  sendMail.h  shake.h  shake_detection.h  sharedDataLayout.h  sharedMem.h  udp_commands.h  udp_server.h  utils.h  video_capture.h
app/src/: audio_proc.c  audio_rec.c  button_controls.c  camera_controls.c  capture.c  commands.c  joystick_controls.c  lcd.c  main.c  menu.c  nightLight.c  sendMail.c  shake.c  shake_detection.c  sharedMem.c  udp_commands.c  udp_server.c  utils.c  video_capture.c
beatbox-server/: package-lock.json  package.json  server.js
beatbox-server/lib/: beatbox_server.js
beatbox-server/public/: cctv_ui.js  index.html
beatbox-server/public/javascripts/: beatbox_ui.js
boneCV-master/: CMakeLists.txt  Makefile  capture.c  capture_exec  streamVideoUDP
cctv-server/: package-lock.json  server.js  term_project
cctv-server/lib/: cctv_server.js
cctv-server/public/: cctv_ui.js  index.html  style.css
hal/: CMakeLists.txt
hal/include/hal/: R5.h  accelerometer.h  audioMixer.h  gpio.h  i2c.h  joystick.h  led.h  lightSensor.h  motionSensor.h  motion_sensor.h  panTilt.h  rotary.h  sharedDataLayout.h  timeout.h
hal/src/: R5.c  accelerometer.c  audioMixer.c  gpio.c  i2c.c  joystick.c  led.c  lightSensor.c  motionSensor.c  motion_sensor.c  panTilt.c  rotary.c  timeout.c
lcd/lib/Config/: DEV_Config.c
lcd/lib/LCD/: LCD_1in54.c
project-R5/: CMakeLists.txt  load_r5_mcu.sh  r5_mcu_build.sh
project-R5/boards/: beagley_ai_j722s_mcu_r5f0_0.overlay
project-R5/src/: main.c  sharedDataLayout.h
